--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -18,7 +18,23 @@
 
   xhr = !field.associated_collection_cache_all
 
-  collection = xhr ? [[selected_name, selected_id]] : controller.list_entries(config, :index, field.associated_collection_scope, false).map { |o| [o.send(field.associated_object_label_method), o.send(field.associated_primary_key)] }
+  collection =
+    if xhr
+      [[selected_name, selected_id]]
+    else
+      includes_current = false
+      _collection = controller.list_entries(config, :index, field.associated_collection_scope, false).map do |o|
+        associated_id = o.send(field.associated_primary_key)
+        includes_current ||= associated_id == selected_id
+        [o.send(field.associated_object_label_method), associated_id]
+      end
+
+      if selected_id && !includes_current
+        _collection << [selected_name, selected_id]
+      end
+
+      _collection
+    end
 
   js_data = {
     xhr: xhr,
